fixed overflow

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -127,6 +127,7 @@ $whatWeHaveDoneBreakpoint: 800;
 .whatWeHaveDone {
     display: flex;
     flex: 1;
+    overflow: hidden;
 
     .left {
         flex: 3;
